--- a/UnitConverter/App.config
+++ b/UnitConverter/App.config
@@ -14,7 +14,7 @@
     </providers>
   </entityFramework>
 
-<connectionStrings><add name="DatabaseContext" connectionString="Data Source=nt-27.wwsi.edu.pl,1601; Initial Catalog=KASETY_502_05;User ID=Z502_05;Password=Z502_05;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
+<connectionStrings><add name="DatabaseContext" connectionString="Data Source=nt-27.wwsi.edu.pl,1601; Initial Catalog=KASETY_508_20;User ID=508_20;Password=508_20;MultipleActiveResultSets=True;App=EntityFramework" providerName="System.Data.SqlClient" /></connectionStrings>
   <appSettings>
     <add key="StatisticsRepository" value="AzureStorage" />
     <add key="StorageName" value="wwsi" />
