--- a/Unit_Coverter_Part2/UnitConverter.Logic/UnitConverter.Logic.csproj
+++ b/Unit_Coverter_Part2/UnitConverter.Logic/UnitConverter.Logic.csproj
@@ -84,6 +84,7 @@
     <Compile Include="Properties\AssemblyInfo.cs" />
     <Compile Include="Services\ConvertersService.cs" />
     <Compile Include="Services\LenghtConverter.cs" />
+    <Compile Include="Services\PressureConverter.cs" />
     <Compile Include="Services\TemperatureConverter.cs" />
     <Compile Include="Services\WeightConverter.cs" />
     <Compile Include="StatisticDTO.cs" />
